--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,21 @@
   text-align: center;
 }
 
+#add {
+  display: inline-block;
+  
+}
+
+table {
+  margin: auto;
+  min-width: 40%;
+}
+
+td, th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
